fix: reduce gap further to 2px

--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ select {
   display: block;
 }
 .top-header-logo img:first-child {
-  margin-right: 4px;
+  margin-right: 2px;
   margin-left: 8px;
 }
 .top-header-logo img:last-child {
